--- a/src/components/buttons/SimpleButton.css
+++ b/src/components/buttons/SimpleButton.css
@@ -4,8 +4,9 @@
     text-decoration: none;
     padding: 2px 17px 4px 16px;
     margin: 5px 5px 5px 5px;
+    font-style: normal;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 21px;
     letter-spacing: 1px;
     outline: none;
