--- a/src/components/companyPagePhotoPlace/CompanyPagePhotoPlace.css
+++ b/src/components/companyPagePhotoPlace/CompanyPagePhotoPlace.css
@@ -24,7 +24,7 @@
     margin-top: 15px;
 }
 .prof {
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 300;
     margin-bottom: 10px;
 }
