--- a/src/components/forWorker/styles1/WorkerProfile.css
+++ b/src/components/forWorker/styles1/WorkerProfile.css
@@ -40,7 +40,7 @@ td {
     margin: 15px 0;
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 20px;
     text-transform: uppercase;
     text-align: center;
@@ -61,7 +61,8 @@ td {
     font-weight: 500;
 }
 .work-type-wr {
-    text-align: left;
+    font-size: 0.875rem;
+    text-align: center;
     width: 240px;
     margin: auto;
 }
@@ -73,8 +74,9 @@ td {
 .contact-title {
     font-weight: 500;
     width: 100%;
-    margin: 25px 0;
-    text-align: center;
+    margin: 30px 0 5px 10px;
+    font-size: 0.875rem;
+    text-align: left;
     text-transform: uppercase;
 }
 .contact-content-wr {
