--- a/src/components/styles/HeaderApp.css
+++ b/src/components/styles/HeaderApp.css
@@ -19,11 +19,10 @@
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     text-decoration: none;
-    color: #0c1618;
     text-align: center;
 }
 .f-s {
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 .link-padding {
     padding: 18px 0;
@@ -36,16 +35,18 @@
     cursor: pointer;
 }
 .logo-title {
-    padding: 18px 0 18px 15px;
+    padding: 14px 0 14px 15px;
     text-decoration: none;
     color: #0c1618;
+    font-size: 24px;
+    margin-bottom: 5px;
 }
 .link-padding-tab {
     padding: 18px 0;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     position: relative;
-    margin-left: 20px;
+    margin-left: 1.25rem; /* 20px*/
 }
 
 .active2 {
@@ -61,9 +62,13 @@
 @media (max-width: 768px) {
     .appbar {
         /*flex-direction: column;*/
-        font-size: 1.0rem;
+        font-size: 0.9375rem;
     }
     .links {
-        font-size: 1.0rem;
+        font-size: 0.9375rem;
+    }
+    .link-padding-tab {
+        padding: 18px 0 4px 18px;
+        margin-left: 0.6rem; /* 20px*/
     }
 }
