--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  font-size: 100%;
+}
 body {
   margin: 0;
   /*font-family: -apple-system, BlinkMacSystemFont,'Roboto', 'Oxygen', 'Segoe UI',*/
@@ -8,10 +11,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #ffffff;
   color: #505350;
-  /*font-size: 62.5%;*/
-  font-size: 14px;
+  font-size: 0.875rem; /* соответствует 14px,  1rem=16px   */
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -20,8 +21,8 @@ code {
 .input-field {
   width: 100%;
   height: 25px;
-  font-size: 16px;
-  line-height: 21px;
+  font-size: 1rem; /* 16px */
+  line-height: 1.3125rem; /* - 21px, 14px - 0,875rem,  12px - 0,75rem, 10px - 0,625rem */
   border-radius: 5px;
   border: 2px solid #0C1618;
   outline: none;
@@ -66,9 +67,7 @@ code {
   margin: auto;
   width: 90px;
 }
-p {
-  font-size: 14px;
-}
+
 h1, h2, h3 {
   text-transform: uppercase;
 }
@@ -101,12 +100,13 @@ h1, h2, h3 {
   color: #ffffff;
   border-radius: 5px;
 }
+
 .wrapper-personal-account {
   display: flex;
   justify-content: space-around;
   margin: 30px 0;
   height: auto;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 .left-wrapper-personal-account {
   box-shadow: 0 0 3px 2px rgba(132, 140, 142, 0.5);
@@ -142,19 +142,19 @@ h1, h2, h3 {
 }
 .company-page-title {
   text-align: center;
-  font-size: 20px;
-  line-height: 23px;
+  font-size: 1.25rem;
+  line-height: 1.4375rem;
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: 0.0625rem; /* 1px */
   color: #525252;
   padding: 36px 0 32px 0;
 }
 .vacancy-title {
   font-style: normal;
   font-weight: bold;
-  font-size: 16px;
-  letter-spacing: 0.5px;
+  font-size: 1rem;
+  letter-spacing: 0.0313rem;
 }
 textarea {
   resize: none;
@@ -178,38 +178,38 @@ textarea {
 }
 .font-10-b {
   font-weight: bold;
-  font-size: 10px;
+  font-size: 0.625rem;
 }
 .font-12-norm {
   font-weight: normal;
-  font-size: 12px;
-  line-height: 12px;
+  font-size: 0.75rem;
+  line-height: 0.75rem;
 }
 .font-12-500 {
   font-weight: 500;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
 }
 .font-14-500 {
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 0.875rem;
+  line-height: 1rem;
 }
 .font-bold {
   font-weight: bold;
 }
 .font-16-normal {
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1rem;
 }
 .font-16-bold {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1rem;
 }
 .font-20-bold {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 .marg-b-9 {
   margin-bottom: 9px;
